Commit: Interfaz de restablecer contraseña, mejora de funcionalidad entre pestañas, se agrega fondo de imagen, y correción de advertencias