@@ -296,7 +296,7 @@ public class gestionProductos extends JFrame {
         Timer timer = new Timer(1000, e -> {
             Date now = new Date();
             SimpleDateFormat sdfTime = new SimpleDateFormat("hh:mm:ss a");
-            SimpleDateFormat sdfDate = new SimpleDateFormat("EEEE, d 'de' MMMM", new Locale("es", "ES"));
+            SimpleDateFormat sdfDate = new SimpleDateFormat("EEEE, d 'de' MMMM", Locale.of("es", "ES"));
             lblClock.setText(sdfTime.format(now));
             lblDate.setText(sdfDate.format(now));
         });
